        Improve handling of situation where logfile can't be opened (Ian)
        Always pass -D/--pgdata option to pg_basebackup (Ian)
        Bugfix: standby clone --force does not empty pg_xlog (Gianni)
        Bugfix: autofailover with reconnect_attempts > 1 (Gianni)
        Bugfix: ignore comments after values (soxwellfb)
        Bugfix: handle string values in 'node' parameter correctly(Gregory Duchatelet)
        Allow repmgr to be compiled with a newer libpq (Marco)
        Bugfix: call update_node_record_set_upstream() for STANDBY FOLLOW (Tomas)

3.0.1   2015-04-16
        Prevent repmgrd from looping infinitely if node was not registered (Ian)
        When promoting a standby, have repmgr (not repmgrd) handle metadata updates (Ian)
        Re-use replication slot if it already exists (Ian)
        Prevent a test SSH connection being made when not needed (Ian)
        Correct monitoring table column names (Ian)

3.0     2015-03-27
        Require PostgreSQL 9.3 or later (Ian)
        Use `pg_basebackup` by default (instead of `rsync`) to clone standby servers (Ian)
        Use `pg_ctl promote` to promote a standby to primary
        Enable tablespace remapping using `pg_basebackup` (in PostgreSQL 9.3 with `rsync`) (Ian)
        Support cascaded standbys (Ian)
        "pg_bindir" no longer required as a configuration parameter (Ian)
        Enable replication slots to be used (PostgreSQL 9.4 and later (Ian)
        Command line option "--check-upstream-config" (Ian)
        Add event logging table and option to execute an external program when an event occurs (Ian)
        General usability and logging message improvements (Ian)
        Code consolidation and cleanup (Ian)

2.0.3   2015-04-16
        Add -S/--superuser option for witness database creation Ian)
        Add -c/--fast-checkpoint option for cloning (Christoph)
        Add option "--initdb-no-pwprompt" (Ian)

2.0.2   2015-02-17
        Add "--checksum" in rsync when using "--force" (Jaime)