@@ -5,9 +5,10 @@
         Bugfix: standby clone --force does not empty pg_xlog (Gianni)
         Bugfix: autofailover with reconnect_attempts > 1 (Gianni)
         Bugfix: ignore comments after values (soxwellfb)
-        Bugfix: handle string values in 'node' parameter correctly(Gregory Duchatelet)
+        Bugfix: handle string values in 'node' parameter correctly (Gregory Duchatelet)
         Allow repmgr to be compiled with a newer libpq (Marco)
         Bugfix: call update_node_record_set_upstream() for STANDBY FOLLOW (Tomas)
+        Update `repmgr --help` output (per Github report from renard)
 
 3.0.1   2015-04-16
         Prevent repmgrd from looping infinitely if node was not registered (Ian)
